[package]
name = "deta"
version = "0.0.0"
edition = "2021"
description = """
(Unofficial) Deta SDK for Rust.
"""
license = "MIT"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1"], default-features = false, optional = true }
hyper-tls = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.78"

[features]
base = ["hyper"]
