[package]
name = "deta"
version = "0.0.1"
edition = "2021"
description = """
(Unofficial) Deta SDK for Rust.
"""
license = "MIT"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.16", features = ["client", "http1"], default-features = false, optional = true }
hyper-tls = { version = "0.5.0", optional = true }
serde = { version = "1.0.136", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0.78", optional = true }

[features]
base = ["hyper", "hyper-tls", "serde", "serde_json"]
